fix word spacing

--- a/src/pages/intl-tuesday/styles.module.css
+++ b/src/pages/intl-tuesday/styles.module.css
@@ -29,10 +29,6 @@
 	span {
 		animation: fade-in 1s ease;
 	}
-
-	span:not(:last-child)::after {
-		content: ' ';
-	}
 }
 
 @keyframes fade-in {
